force-app/main/default/objects/ImportantNotes__c/ImportantNotes__c.object-meta.xml
<CustomObject>
    <label>要録情報</label>
    <nameField>
        <displayFormat>IN{YYYY}/{MM}-{000}</displayFormat>
        <label>要録情報名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>