force-app/main/default/objects/ImportantNotes__c/fields/Abduction__c.field-meta.xml
<CustomField>
    <fullName>Abduction__c</fullName>
    <label>忌引き</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>