force-app/main/default/objects/ImportantNotes__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>Contact__r.Age__c</formula>
    <label>年齢</label>
    <type>Text</type>
</CustomField>