force-app/main/default/objects/ImportantNotes__c/fields/AggregationTime__c.field-meta.xml
<CustomField>
    <fullName>AggregationTime__c</fullName>
    <label>[システム]集計時間</label>
    <type>DateTime</type>
</CustomField>