force-app/main/default/objects/ImportantNotes__c/fields/AnotherAffiliation__c.field-meta.xml
<CustomField>
    <fullName>AnotherAffiliation__c</fullName>
    <label>所属の別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AnotherAffiliation</valueSetName>
    </valueSet>
</CustomField>