force-app/main/default/objects/ImportantNotes__c/fields/AttendanceDays__c.field-meta.xml
<CustomField>
    <fullName>AttendanceDays__c</fullName>
    <label>出席日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>