force-app/main/default/objects/ImportantNotes__c/fields/AttendanceDisplay__c.field-meta.xml
<CustomField>
    <fullName>AttendanceDisplay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>出席簿に表示</label>
    <type>Checkbox</type>
</CustomField>