force-app/main/default/objects/ImportantNotes__c/fields/AttendanceStopDays__c.field-meta.xml
<CustomField>
    <fullName>AttendanceStopDays__c</fullName>
    <label>出席停止日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>