force-app/main/default/objects/ImportantNotes__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>銀行名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>