force-app/main/default/objects/ImportantNotes__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>Contact__r.Birthdate</formula>
    <label>誕生日</label>
    <type>Date</type>
</CustomField>