force-app/main/default/objects/ImportantNotes__c/fields/BusDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>BusDisplayOrder__c</fullName>
    <label>バス表示順</label>
    <length>10</length>
    <type>Text</type>
</CustomField>