force-app/main/default/objects/ImportantNotes__c/fields/BusStop__c.field-meta.xml
<CustomField>
    <fullName>BusStop__c</fullName>
    <formula>Contact__r.BusStop__c</formula>
    <label>バス停</label>
    <type>Text</type>
</CustomField>