force-app/main/default/objects/ImportantNotes__c/fields/ChickenPox__c.field-meta.xml
<CustomField>
    <fullName>ChickenPox__c</fullName>
    <label>水痘（みずぼうそう）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>