force-app/main/default/objects/ImportantNotes__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>学級</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>みつば</fullName>
            </value>
            <value>
                <fullName>ふたば</fullName>
            </value>
            <value>
                <fullName>つぼみ</fullName>
            </value>
            <value>
                <fullName>あさがお</fullName>
            </value>
            <value>
                <fullName>すみれ</fullName>
            </value>
            <value>
                <fullName>たんぽぽ</fullName>
            </value>
            <value>
                <fullName>ばら</fullName>
            </value>
            <value>
                <fullName>さくら</fullName>
            </value>
            <value>
                <fullName>きく</fullName>
            </value>
            <value>
                <fullName>ゆり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>