force-app/main/default/objects/ImportantNotes__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>園児</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>要録情報</relationshipLabel>
    <relationshipName>ImportantNotes_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>