force-app/main/default/objects/ImportantNotes__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>Contact__r.kana__c</formula>
    <label>園児名</label>
    <type>Text</type>
</CustomField>