force-app/main/default/objects/ImportantNotes__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>園長</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>要録情報 (園長)</relationshipLabel>
    <relationshipName>ImportantNotes_Director</relationshipName>
    <type>Lookup</type>
</CustomField>