force-app/main/default/objects/ImportantNotes__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <formula>IF( ISBLANK(Contact__r.EntryDate__c),
&quot;99999999&quot;,
TEXT( YEAR(Contact__r.EntryDate__c) ) + LPAD(TEXT(MONTH(Contact__r.EntryDate__c)), 2 , &#39;0&#39;)  + LPAD(TEXT(DAY(Contact__r.EntryDate__c)), 2 , &#39;0&#39;)
)

+

CASE( Contact__r.Sex__c ,
   &quot;男子&quot;, &quot;0&quot;,
   &quot;女子&quot;, &quot;1&quot;,
   &quot;9&quot;
)

+

IF( ISBLANK(Contact__r.Birthdate ),
&quot;99999999&quot;,
TEXT( YEAR(Contact__r.Birthdate) ) + LPAD(TEXT(MONTH(Contact__r.Birthdate)), 2 , &#39;0&#39;)  + LPAD(TEXT(DAY(Contact__r.Birthdate)), 2 , &#39;0&#39;)
)</formula>
    <label>表示順</label>
    <type>Text</type>
</CustomField>