force-app/main/default/objects/ImportantNotes__c/fields/DropOff__c.field-meta.xml
<CustomField>
    <fullName>DropOff__c</fullName>
    <label>バス送り時間</label>
    <type>Time</type>
</CustomField>