force-app/main/default/objects/ImportantNotes__c/fields/DropOffText__c.field-meta.xml
<CustomField>
    <fullName>DropOffText__c</fullName>
    <formula>LEFT(TEXT(DropOff__c),5)</formula>
    <label>[表示]バス送り時間</label>
    <type>Text</type>
</CustomField>