force-app/main/default/objects/ImportantNotes__c/fields/EducationDays__c.field-meta.xml
<CustomField>
    <fullName>EducationDays__c</fullName>
    <label>教育日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>