force-app/main/default/objects/ImportantNotes__c/fields/EntryDate__c.field-meta.xml
<CustomField>
    <fullName>EntryDate__c</fullName>
    <formula>Contact__r.EntryDate__c</formula>
    <label>入園年月日</label>
    <type>Date</type>
</CustomField>