force-app/main/default/objects/ImportantNotes__c/fields/Field1_del__c.field-meta.xml
<CustomField>
    <fullName>Field1_del__c</fullName>
    <label>てスタオ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>