force-app/main/default/objects/ImportantNotes__c/fields/GradePointEmphasis__c.field-meta.xml
<CustomField>
    <fullName>GradePointEmphasis__c</fullName>
    <label>学年の重点</label>
    <type>TextArea</type>
</CustomField>