force-app/main/default/objects/ImportantNotes__c/fields/Guardian1__c.field-meta.xml
<CustomField>
    <fullName>Guardian1__c</fullName>
    <formula>Contact__r.Guardian1__c</formula>
    <label>保護者名１</label>
    <type>Text</type>
</CustomField>