force-app/main/default/objects/ImportantNotes__c/fields/Guardian2__c.field-meta.xml
<CustomField>
    <fullName>Guardian2__c</fullName>
    <formula>Contact__r.Guardian2__c</formula>
    <label>保護者名２</label>
    <type>Text</type>
</CustomField>