force-app/main/default/objects/ImportantNotes__c/fields/HeadShirami__c.field-meta.xml
<CustomField>
    <fullName>HeadShirami__c</fullName>
    <label>頭し</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>