force-app/main/default/objects/ImportantNotes__c/fields/Influenza__c.field-meta.xml
<CustomField>
    <fullName>Influenza__c</fullName>
    <label>インフルエンザ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>