force-app/main/default/objects/ImportantNotes__c/fields/Lateness__c.field-meta.xml
<CustomField>
    <fullName>Lateness__c</fullName>
    <label>遅刻日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>