force-app/main/default/objects/ImportantNotes__c/fields/LeaveEarly__c.field-meta.xml
<CustomField>
    <fullName>LeaveEarly__c</fullName>
    <label>早退日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>