force-app/main/default/objects/ImportantNotes__c/fields/Mail1__c.field-meta.xml
<CustomField>
    <fullName>Mail1__c</fullName>
    <label>メール1</label>
    <type>Email</type>
</CustomField>