force-app/main/default/objects/ImportantNotes__c/fields/Mail_Enji__c.field-meta.xml
<CustomField>
    <fullName>Mail_Enji__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メール（園児から）</label>
    <type>Text</type>
</CustomField>