force-app/main/default/objects/ImportantNotes__c/fields/Measles__c.field-meta.xml
<CustomField>
    <fullName>Measles__c</fullName>
    <label>麻風（はしか）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>