force-app/main/default/objects/ImportantNotes__c/fields/Meningitis__c.field-meta.xml
<CustomField>
    <fullName>Meningitis__c</fullName>
    <label>髄膜炎菌性髄膜炎（ずいまくえん）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>