force-app/main/default/objects/ImportantNotes__c/fields/Mumps__c.field-meta.xml
<CustomField>
    <fullName>Mumps__c</fullName>
    <label>流行性耳下腺炎（おたふくかぜ）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>