force-app/main/default/objects/ImportantNotes__c/fields/PassageRoute__c.field-meta.xml
<CustomField>
    <fullName>PassageRoute__c</fullName>
    <formula>TEXT(Contact__r.PassageRoute__c)</formula>
    <label>通園コース</label>
    <type>Text</type>
</CustomField>