force-app/main/default/objects/ImportantNotes__c/fields/PersonalEmphasis__c.field-meta.xml
<CustomField>
    <fullName>PersonalEmphasis__c</fullName>
    <label>個人の重点</label>
    <type>TextArea</type>
</CustomField>