force-app/main/default/objects/ImportantNotes__c/fields/PickUpTime__c.field-meta.xml
<CustomField>
    <fullName>PickUpTime__c</fullName>
    <label>バス迎え時間</label>
    <type>Time</type>
</CustomField>