force-app/main/default/objects/ImportantNotes__c/fields/PickUpTimeText__c.field-meta.xml
<CustomField>
    <fullName>PickUpTimeText__c</fullName>
    <formula>LEFT(TEXT(PickUpTime__c),5)</formula>
    <label>[表示]バス迎え時間</label>
    <type>Text</type>
</CustomField>