force-app/main/default/objects/ImportantNotes__c/fields/PoolHeat__c.field-meta.xml
<CustomField>
    <fullName>PoolHeat__c</fullName>
    <label>咽頭結膜熱（プール熱）</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>