force-app/main/default/objects/ImportantNotes__c/fields/ReferenceItems__c.field-meta.xml
<CustomField>
    <fullName>ReferenceItems__c</fullName>
    <label>参考となる事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>