force-app/main/default/objects/ImportantNotes__c/fields/RelationshipWithChildren1__c.field-meta.xml
<CustomField>
    <fullName>RelationshipWithChildren1__c</fullName>
    <formula>Contact__r.RelationshipWithChildren1__c</formula>
    <label>保護者１：関係</label>
    <type>Text</type>
</CustomField>