force-app/main/default/objects/ImportantNotes__c/fields/RelationshipWithChildren2__c.field-meta.xml
<CustomField>
    <fullName>RelationshipWithChildren2__c</fullName>
    <formula>Contact__r.RelationshipWithChildren2__c</formula>
    <label>保護者２：関係</label>
    <type>Text</type>
</CustomField>