force-app/main/default/objects/ImportantNotes__c/fields/Rubella__c.field-meta.xml
<CustomField>
    <fullName>Rubella__c</fullName>
    <label>風疹（三日はしか）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>