force-app/main/default/objects/ImportantNotes__c/fields/SchoolLunchfree2__c.field-meta.xml
<CustomField>
    <fullName>SchoolLunchfree2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>（削除）副食費免除者</label>
    <type>Checkbox</type>
</CustomField>