force-app/main/default/objects/ImportantNotes__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <formula>TEXT(Contact__r.Sex__c)</formula>
    <label>性別</label>
    <type>Text</type>
</CustomField>