force-app/main/default/objects/ImportantNotes__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担任</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>要録情報（担任）</relationshipLabel>
    <relationshipName>Staff_Teacher</relationshipName>
    <type>Lookup</type>
</CustomField>