force-app/main/default/objects/ImportantNotes__c/fields/Tuberculosis__c.field-meta.xml
<CustomField>
    <fullName>Tuberculosis__c</fullName>
    <label>結核（けっかく）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>