force-app/main/default/objects/ImportantNotes__c/fields/WhoopingCough__c.field-meta.xml
<CustomField>
    <fullName>WhoopingCough__c</fullName>
    <label>百日咳（百日咳）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>