force-app/main/default/objects/ImportantNotes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FiscalYear__c</columns>
    <columns>School__c</columns>
    <columns>Belongs__c</columns>
    <columns>AttendanceDisplay__c</columns>
    <columns>Class__c</columns>
    <columns>Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Sex__c</columns>
    <columns>Teacher__c</columns>
    <columns>BusDisplayOrder__c</columns>
    <columns>PassageRoute__c</columns>
    <columns>Birthdate__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>