force-app/main/default/objects/ImportantNotes__c/listViews/wakaba_2019.listView-meta.xml
<ListView>
    <fullName>wakaba_2019</fullName>
    <columns>NAME</columns>
    <columns>FiscalYear__c</columns>
    <columns>Number__c</columns>
    <columns>BusDisplayOrder__c</columns>
    <columns>PassageRoute__c</columns>
    <columns>Class__c</columns>
    <columns>Contact__c</columns>
    <columns>Teacher__c</columns>
    <columns>ChildcareDays__c</columns>
    <columns>AttendanceDays__c</columns>
    <columns>Sex__c</columns>
    <columns>Birthdate__c</columns>
    <columns>Age__c</columns>
    <columns>School__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FiscalYear__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>2019年度_わかば</label>
</ListView>